# school_material

2oAno/CR/Pratica/: .project
2oAno/IIA/Práticas/Ficha7/: CMakeLists.txt
2oAno/IIA/Práticas/Ficha7/CodigoTrepaColinas/: CMakeLists.txt  algoritmo.c  grafo_20.txt  grafo_50.txt  main.c
2oAno/IIA/TPNetlogo/: RelatorioI_TP1_IA.pages  codigoTpBase.rtf  codigoTpMelhorado.rtf  tpBase.nlogo  tpMelhorado.nlogo
2oAno/IPM/TP1/: Notas_TP1.rtf  Trabalho_Pratico_No1.pages
2oAno/IPM/TP2/: TP2_IPM_GoncaloEnes&DanielDuarte (1).key  TP2_IPM_PedroPaivaJoãoCarvalho.pptx
2oAno/IPM/TP3/: TP3_UARTemplate.doc  TP3_UARTemplate_Explanation.doc
2oAno/IPM/TP4/: IPM.docx
2oAno/IPM/TP5/: TP5_relatorio_final.pages  TP5_relatorio_finalWord.docx
2oAno/MD/TP/: Descricao detalhada caso de uso.txt  TP_meta1.mdj  tp.mdj
2oAno/PA/: tp_notes.rtf
2oAno/PA/TPMeta1/: relatorio_meta1.pages
2oAno/POO/: RelatorioI_Meta1_POO.pages
2oAno/POO/Pratica/: CMakeLists.txt
2oAno/SO/Pratica/: funcionamento_pipe_receberdopipeaoinvesdoscanf.rtf
2oAno/SO/resolucao_pratica_exameNormal_2223/: ex4.c  play  play.c
2oAno/SO2/: Teorica.rtf
2oAno/VMFiles/21390/: ConvertConfig.ini  aria2_script.6083.txt  uup_download_linux.sh  uup_download_windows.cmd
3oAno/AMOV/: notas.rtf  settings.gradle.kts
3oAno/AMOV/LocationMaps/: settings.gradle.kts
3oAno/AMOV/Pratica/: settings.gradle.kts
3oAno/AMOV/app/: build.gradle.kts
3oAno/AMOV/exXMLexame/: settings.gradle.kts
3oAno/CR/: CR.rar  relatorio.docx
3oAno/Estagio/: Template4LaTeX4ISEC.tar
3oAno/PD/: PD-2023-24-TP-5001.db  PD-2023-24-TP.db
(+1610 files in other folders)
